--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 */
 
 #wc-ob-pbx-admin {
-    background: url("http://www.openboutique.net/wp-content/uploads/2013/08/LOGO-OPEN-BOUTIQUE-300x46.png?v=woocommerce-paybox-gateway-0.3.4") no-repeat scroll 15px 18px #FFFFFF;
+    background: url("http://www.openboutique.net/wp-content/uploads/2013/08/LOGO-OPEN-BOUTIQUE-300x46.png?v=woocommerce-paybox-gateway-0.3.6") no-repeat scroll 15px 18px #FFFFFF;
     border: 1px solid #F96E5B;
     box-shadow: 1px 1px 0 rgba(255, 255, 255, 0.5) inset, -1px -1px 0 rgba(255, 255, 255, 0.5) inset;
     padding: 15px 0px 10px 350px;
@@ -19,7 +19,8 @@
 }
 
 #ob-paybox_baseline {
-    position:relative;
-    left:-315px;
-    top:50px;
+    position: relative;
+    left: -315px;
+    top: 50px;
+	max-width: 300px;
 }
